--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
     <title>Hello World!</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <!-- All of the Node.js APIs are available in this renderer process. -->
-    We are using Node.js <script>document.write(process.versions.node)</script>,
-    Chromium <script>document.write(process.versions.chrome)</script>,
-    and Electron <script>document.write(process.versions.electron)</script>.
-
+    <webview id="foo" src="test.html" preload="preload.js" nodeintegration></webview>
     <script>
-      // You can also require other files to run in this process
-      require('./renderer.js')
+      function getAllInputs() {
+        document.querySelectorAll('input').forEach(elem => {
+          elem.addEventListener('focus', () => {
+            sendToElectron('focused')
+          })
+        })
+      }
+    </script>
+    <script>
+      let webview = document.querySelector('#foo')
+      webview.addEventListener('ipc-message', (event) => {
+        openKey
+      })
+      webview.addEventListener('dom-ready', () => {
+        webview.executeJavaScript(`${getAllInputs.toString()};getAllInputs()`)
+      })
     </script>
   </body>
 </html>
